[gd_scene load_steps=10 format=2]

[ext_resource path="res://Attack/MeleeAttack.gd" type="Script" id=1]
[ext_resource path="res://Sprites/MeleeAttack/Melee_attack1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MeleeAttack/Melee_attack2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/MeleeAttack/Melee_attack3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/MeleeAttack/Melee_attack4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/MeleeAttack/Melee_attack5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/MeleeAttack/Melee_attack6.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "melee_attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.8088
height = 2.21632

[node name="MeleeAttack" type="Area2D"]
script = ExtResource( 1 )

[node name="MeleeEffect" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "melee_attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_MeleeAttack_body_entered"]
[connection signal="animation_finished" from="MeleeEffect" to="." method="_on_MeleeEffect_animation_finished"]
